# FYP_Layout_Retrieval_System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/.vectorstore/: faiss.index  metadata.json
data/.vectorstore/1706.03762.pdf/: faiss.index  metadata.json
data/.vectorstore/2010.11929v2.pdf/: faiss.index  metadata.json
data/.vectorstore/imagenet-classification.pdf/: faiss.index  metadata.json
data/annotations/: annotations-attention.json  annotations-imagenet.json  annotations-vit.json  instances_default.json  qa-pairs-attention.json  qa-pairs-imagenet.json  qa-pairs-vit.json  qa-pairs.json
src/: document_analysis.py  download_pdf.py  interface.py  main.py  paper_engine.py  pdf_manager.py  test.ipynb  test_interface.py
