[project]
name = "fyproject"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SigmaProtogen", email = "lewischng24@gmail.com" }
]
dependencies = [
    "transformers>=4.46.1",
    "unstructured>=0.16.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fyproject"]
