[project]
name = "fyproject"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SigmaProtogen", email = "lewischng24@gmail.com" }
]
dependencies = [
    "transformers>=4.46.1",
    "doi2pdf>=0.1.3",
    "layoutparser>=0.3.4",
    "panel>=1.5.4",
    "torch>=2.5.1",
    "pi-heif>=0.21.0",
    "unstructured-inference>=0.8.1",
    "unstructured-pytesseract>=0.3.13",
    "pymupdf>=1.25.0",
    "tesseract>=0.1.3",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fyproject"]
